--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "SFDCFacts Academy",
+  "orgName": "chetansingh.com",
   "edition": "Developer",
   "hasSampleData": true,
   "features": [],
